@@ -557,6 +557,7 @@ int	evaluate(int *result,char *exp, char *error, int maxerrlen)
  *                                                                            *
  * Comments: {DATE},{TIME},{HOSTNAME},{IPADDRESS},{STATUS},                   *
  *           {TRIGGER.NAME}, {TRIGGER.KEY}, {TRIGGER.SEVERITY}                *
+ *           {TRIGGER.ID}                                                     *
  *                                                                            *
  ******************************************************************************/
 /* definition of macros variables */
@@ -569,6 +570,7 @@ int	evaluate(int *result,char *exp, char *error, int maxerrlen)
 #define MVAR_TRIGGER_STATUS		"{TRIGGER.STATUS}"
 #define MVAR_TRIGGER_STATUS_OLD		"{STATUS}"
 #define MVAR_TRIGGER_SEVERITY		"{TRIGGER.SEVERITY}"
+#define MVAR_TRIGGER_ID			"{TRIGGER.ID}"
 
 #define STR_UNKNOWN_VARIAVLE		"*UNKNOWN*"
 
@@ -730,6 +732,14 @@ void	substitute_simple_macros(DB_TRIGGER *trigger, DB_ACTION *action, char *data
 				snprintf(replace_to, sizeof(replace_to), "OFF");
 			else
 				snprintf(replace_to, sizeof(replace_to), "ON");
+		}
+		else if(macro_type & (MACRO_TYPE_MESSAGE_SUBJECT | MACRO_TYPE_MESSAGE_BODY) && 
+			strncmp(pr, MVAR_TRIGGER_ID, strlen(MVAR_TRIGGER_ID)) == 0)
+		{
+			/* NOTE: if you make changes for this bloc, don't forgot MVAR_TRIGGER_STATUS block */
+			var_len = strlen(MVAR_TRIGGER_ID);
+
+			snprintf(replace_to, sizeof(replace_to), "%d", trigger->triggerid);
 		}
 		else if(macro_type & (MACRO_TYPE_MESSAGE_SUBJECT | MACRO_TYPE_MESSAGE_BODY) && 
 			strncmp(pr, MVAR_TRIGGER_SEVERITY, strlen(MVAR_TRIGGER_SEVERITY)) == 0)
